# PinT-LIB

./: .gitignore  README.md  notes.md  pyproject.toml
Parameter/Javid/: parameters_Li_full.py  parameters_Li_half.py
batpint/: __init__.py
batpint/parameter/javid/: Li_full.py  Li_half.py  __init__.py
batpint/parameter/javid/OCV/: OCV_an.csv  OCV_cat.csv
scripts/notebooks/: cccv_full_cell.ipynb  cccv_half_cell.ipynb  dahlquist.ipynb  gitt_full_cell.ipynb  gitt_half_cell.ipynb
scripts/runs/: 01_baseCase.py
testcases/: cccv_full_cell.ipynb  cccv_half_cell.ipynb  gitt_full_cell.ipynb  gitt_half_cell.ipynb
