[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "batpint"
version = "0.0.1"
description = "Battery modeling using Parallel-in-Time methods"
dependencies = [
    "pybamm",
    "numpy",
    "matplotlib",
    "jupyter",
    "notebook",
    "ipywidgets"
]
requires-python = ">=3.10"
maintainers = [
    {name = "Aigerim Yessim", email = "yessima@hsu-hh.de"},
    {name = "Thibaut Lunet", email = "thibaut.lunet@tuhh.de"},
]
readme = "README.md"